Add unit tests with xUnit and add order to rules

--- a/TaxCalculatorServer/TaxCalculator.Server.csproj
+++ b/TaxCalculatorServer/TaxCalculator.Server.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Services\Services.csproj" />
+    <ProjectReference Include="..\Services\TaxCalculator.Services.csproj" />
   </ItemGroup>
 
 </Project>
